2015-07-23  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (cygheap_user::ontherange): Ignore $HOME if it's not
	starting with a slash (aka, absolute POSIX Path).

2015-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (siglongjmp): Export.
	(sigsetjmp): Export.
	* gendef: Change formatting of some comments.
	(sigsetjmp): Implement.
	(siglongjmp): Implement.
	(__setjmpex): x86_64 only: Drop entry point.
	(setjmp): x86_64 only: Store tls stackptr in Frame now, store MXCSR
	and FPUCW registers in Spare, as MSVCRT does.
	(longjmp): x86_64 only: Restore tls stackptr from Frame now, restore
	MXCSR and FPUCW registers from Spare.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2015-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/signal.h (MINSIGSTKSZ): Define as 8K, unconditionally.
	(SIGSTKSZ): Define as 32K, unconditionally.

2015-07-19  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (initial_env): Reduce size of local path buffers to
	PATH_MAX.  Allocate debugger_command from process heap.
	(init_windows_system_directory): Very early initialize new global
	variable global_progname.
	* dll_init.cc (dll_list::alloc): Make path buffer static.  Explain why.
	(dll_list::populate_deps): Use tmp_pathbuf for local path buffer.
	* exceptions.cc (debugger_command): Convert to PWCHAR.
	(error_start_init): Allocate debugger_command and fill with wide char
	strings.  Only allocate if NULL.
	(try_to_debug): Just check if debugger_command is a NULL pointer to
	return.  Drop conversion from char to WCHAR and drop local variable
	dbg_cmd.
	* globals.cc (global_progname): New global variable to store Windows
	application path.
	* pinfo.cc (pinfo_basic::pinfo_basic): Just copy progname over from
	global_progname.
	(pinfo::status_exit): Let path_conv create the POSIX path to
	avoid local buffer.
	* pseudo_reloc.cc (__report_error): Utilize global_progname, drop local
	buffer.